fix: fixed minor UI issues on mobile

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -95,4 +95,18 @@
     padding-left: 0;
     padding-right: 0;
   }
+
+  .aboutItem h3 {
+    font-size: 18px;
+  }
+  
+  .aboutItem p {
+    font-size: 18px;
+  }
+
+  .aboutItem img {
+    width: 30px;
+    height: 30px;
+    margin-right: 15px;
+  }
 }
