--- a/src/components/Credits/Credits.module.css
+++ b/src/components/Credits/Credits.module.css
@@ -18,12 +18,6 @@
   letter-spacing: 4px;
 }
 
-.text p {
-  font-size: 40px;
-  font-weight: 400;
-  letter-spacing: 2px;
-}
-
 .links {
   display: flex;
   flex-direction: column;
@@ -43,7 +37,6 @@
   text-decoration: none;
   font-size: 20px;
   font-weight: 400;
-  letter-spacing: 1.5px;
 }
 
 .link a:hover {
@@ -64,5 +57,11 @@
 
   .links {
     align-items: center;
+  }
+
+  .link a {
+    font-size: 15px;
+    font-weight: 400;
+    letter-spacing: 1px;
   }
 }
