--- a/src/components/Education/Education.module.css
+++ b/src/components/Education/Education.module.css
@@ -43,12 +43,12 @@
   padding: 24px;
 }
 
-.historyItem img {
-  width: 60px;
-}
-
 .historyItemDetails {
   font-family: var(--font-roboto);
+}
+
+.historyItem img {
+  width: 60px;
 }
 
 .historyItemDetails h3 {
@@ -62,11 +62,16 @@
 }
 
 .historyItemDetails ul {
-  margin-top: 6px;
+  margin-top: 10px;
   list-style-position: inside;
   font-size: 25px;
   list-style-type: disc;
   margin-left: 17px;
+
+  li span {
+    position: relative;
+    left: -17px;
+  }
 }
 
 @media screen and (max-width: 830px) {
@@ -85,5 +90,18 @@
   .history {
     width: 100%;
     gap: 9px;
+  }
+
+  .historyItem img {
+    width: 40px;
+  }
+  
+  .historyItemDetails h3 {
+    font-size: 20px;
+    font-weight: 500;
+  }
+  
+  .historyItemDetails ul {
+    font-size: 17px;
   }
 }
